@@ -30,6 +30,7 @@
 #include "zend_ini.h"
 #include "zend_vm.h"
 #include "zend_unicode.h"
+#include "zend_dtrace.h"
 
 #ifdef ZTS
 # define GLOBAL_FUNCTION_TABLE		global_function_table
@@ -1133,10 +1134,18 @@ int zend_startup(zend_utility_functions *utility_functions, char **extensions TS
 	zend_getenv = utility_functions->getenv_function;
 	zend_resolve_path = utility_functions->resolve_path_function;
 
+#if HAVE_SYS_SDT_H
+/* build with dtrace support */
+	zend_compile_file = dtrace_compile_file;
+	zend_execute = dtrace_execute;
+	zend_execute_internal = dtrace_execute_internal;
+#else
 	zend_compile_file = compile_file;
-	zend_compile_string = compile_string;
 	zend_execute = execute;
 	zend_execute_internal = NULL;
+#endif /* HAVE_SYS_SDT_H */
+
+	zend_compile_string = compile_string;
 	zend_throw_exception_hook = NULL;
 
 	zend_init_opcodes_handlers();
@@ -1537,6 +1546,7 @@ ZEND_API void zend_error(int type, const char *format, ...) /* {{{ */
 	zval *orig_user_error_handler;
 	zend_bool in_compilation;
 	zend_class_entry *saved_class_entry;
+	char dtrace_error_buffer[1024];
 	TSRMLS_FETCH();
 
 	/* Obtain relevant filename and lineno */
@@ -1580,6 +1590,12 @@ ZEND_API void zend_error(int type, const char *format, ...) /* {{{ */
 	}
 
 	va_start(args, format);
+
+	if(DTRACE_ERROR_ENABLED()) {
+		vsprintf(dtrace_error_buffer, format, args);
+	}
+	DTRACE_ERROR(dtrace_error_buffer, error_filename, error_lineno);
+
 
 	/* if we don't have a user defined error handler */
 	if (!EG(user_error_handler)
